--- a/templates/About_App/resourcefull_campus.html
+++ b/templates/About_App/resourcefull_campus.html
@@ -20,7 +20,7 @@
         <div class="container"> 
             <div class="row">
                 <div class="col-md-6">
-                  <img class="img img-fluid" id="campus-img_1" src="img/class_room.jpg" alt="">
+                  <img class="img img-fluid" id="campus-img_1" src="{% static 'img/cls_room.jpg' %}" alt="">
                 </div>
                 <div class="col-md-6 mt-5 mt-sm-2">
                   <h2 class="">STANDARD CLASSROOM</h2>
@@ -47,7 +47,7 @@
                       </p>
                   </div>
                 <div class="col-md-6">
-                  <img class="img img-fluid" id="campus-img_2" src="img/library.jpg" alt="">
+                  <img class="img img-fluid" id="campus-img_2" src="{% static 'img/library.jpg' %}" alt="">
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
       <div class="container"> 
           <div class="row">
               <div class="col-md-6">
-                <img class="img img-fluid" id="campus-img_1" src="img/activity.jpg" alt="">
+                <img class="img img-fluid" id="campus-img_1" src="{% static 'img/sci_lab.jpg' %}" alt="">
               </div>
               <div class="col-md-6 mt-5 mt-sm-2">
                 <h2 class="">SCIENCE LAB</h2>
@@ -72,7 +72,7 @@
       <div class="container"> 
           <div class="row">
               <div class="col-md-6">
-                <img class="img img-fluid" id="campus-img_1" src="img/activity.jpg" alt="">
+                <img class="img img-fluid" id="campus-img_1" src="{% static 'img/com_lab.jpg' %}" alt="">
               </div>
               <div class="col-md-6 mt-5 mt-sm-2">
                 <h2 class="">COMPUTER LAB</h2>
@@ -94,7 +94,7 @@
                     </p>
                 </div>
               <div class="col-md-6">
-                <img class="img img-fluid" id="campus-img_2" src="img/library.jpg" alt="">
+                <img class="img img-fluid" id="campus-img_2" src="{% static 'img/activity_room.jpg' %}" alt="">
               </div>
           </div>
       </div>
@@ -104,7 +104,7 @@
       <div class="container"> 
           <div class="row">
               <div class="col-md-6">
-                <img class="img img-fluid" id="campus-img_1" src="img/class_room.jpg" alt="">
+                <img class="img img-fluid" id="campus-img_1" src="{% static 'img/transport.jpg' %}" alt="">
               </div>
               <div class="col-md-6 mt-5 mt-sm-2">
                 <h2 class="">TRANSPORT</h2>
@@ -129,7 +129,7 @@
                   <p id="para">School provided fabrics and design for all students.<br>White shoes for both boys and girls.</p>
               </div>
               <div class="col-md-6">
-                <img class="img img-fluid" id="campus-img_2" src="img/activity.jpg" alt="">
+                <img class="img img-fluid" id="campus-img_2" src="{% static 'img/uniform.jpg' %}" alt="">
               </div>
           </div>
       </div>
