--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,32 +2,32 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container broder-primary border-bottom-1">
-        <a class="navbar-brand" href="index.html"><img class="img-thumbnail border-0" id="logo" src="{% static 'img/logo.png' %}" alt="" width="100"></a>
+        <a class="navbar-brand" href="{% url 'About_App:home' %}"><img class="img-thumbnail border-0" id="logo" src="{% static 'img/logo.png' %}" alt="" width="100"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav fw-bold">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">HOME</a>
+            <a class="nav-link" href="{% url 'About_App:home' %}">HOME</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ABOUT</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="about.html">ABOUT ETHEREAL</a>
+              <a class="dropdown-item" href="{% url 'About_App:about' %}">ABOUT ETHEREAL</a>
                
               <!-- <div class="dropdown-divider"></div> -->
-              <a class="dropdown-item" href="feature.html">FEATURES</a>
-              <a class="dropdown-item" href="teachers.html">FACULTY MEMBER</a>
-              <a class="dropdown-item" href="extracurricular.html">EXTRACURRICULAR</a>
-              <a class="dropdown-item" href="campus.html">RESOURCEFUL CAMPUS</a>
-              <a class="dropdown-item" href="islamic.html">HIFZUL QURAN</a>
+              <a class="dropdown-item" href="{% url 'About_App:feature' %}">FEATURES</a>
+              <a class="dropdown-item" href="{% url 'About_App:faculty' %}">FACULTY MEMBER</a>
+              <a class="dropdown-item" href="{% url 'About_App:extracurr' %}">EXTRACURRICULAR</a>
+              <a class="dropdown-item" href="{% url 'About_App:campus' %}">RESOURCEFUL CAMPUS</a>
+              <a class="dropdown-item" href="{% url 'About_App:hifz' %}">HIFZUL QURAN</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ACADEMIC</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-              <a class="dropdown-item" href="#">CURRICULAM</a>
+              <a class="dropdown-item" href="{% url 'Academic_App:curriculum' %}">CURRICULAM</a>
               <a class="dropdown-item" href="#">SYLLABUS</a>
               <a class="dropdown-item" href="#">BOOK LIST</a>
               <a class="dropdown-item" href="#">CLASS SCHEDULE</a>
@@ -39,8 +39,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ADMISSION</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-              <a class="dropdown-item" href="admision.html">ADMISSION NOTICE</a>
-              <a class="dropdown-item" href="proces.html">ADMISSION PROCESS</a>
+              <a class="dropdown-item" href="{% url 'Admission_App:notice' %}">ADMISSION NOTICE</a>
+              <a class="dropdown-item" href="{% url 'Admission_App:process' %}">ADMISSION PROCESS</a>
             </div>
           </li>
           <li class="nav-item active">
