--- a/templates/Admission_App/admision.html
+++ b/templates/Admission_App/admision.html
@@ -60,14 +60,6 @@
       </div>
     </section>
 
-    <section class="container admision-location">
-      <div class="row pt-5">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8734.460267432885!2d91.39266102670955!3d23.009515822759518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375369a40e462c1b%3A0x9c4493eee9986bbd!2sEthereal!5e0!3m2!1sen!2sbd!4v1700723926179!5m2!1sen!2sbd" width="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <p class="text-center pt-3">Safa Tower, Doctor Para, Feni. Cell: 01894 615454 <br>
-          Email: ethereal.edu.bd@gmail.com <br> Website: <a href="https://ethereal.com.bd" target="_blank">www.ethereal.com.bd</a></p>
-      </div>
-    </section>
-
     <section>
       <div class="container mt-5">
         <div class="row">
@@ -115,6 +107,13 @@
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </fieldset>
               </form>
+            </div>
+          </div>
+          <div class="col-md-6 admision-location">
+            <div class="row pt-5">
+              <iframe class="mt-md-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8734.460267432885!2d91.39266102670955!3d23.009515822759518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375369a40e462c1b%3A0x9c4493eee9986bbd!2sEthereal!5e0!3m2!1sen!2sbd!4v1700723926179!5m2!1sen!2sbd" width="600" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <p class="text-center pt-3">Safa Tower, Doctor Para, Feni. Cell: 01894 615454 <br>
+                Email: ethereal.edu.bd@gmail.com <br> Website: <a href="https://ethereal.com.bd" target="_blank">www.ethereal.com.bd</a></p>
             </div>
           </div>
         </div>
