--- a/templates/Admission_App/process.html
+++ b/templates/Admission_App/process.html
@@ -18,154 +18,149 @@
 
   <section>
     <div class="container">
-        <div class="row pt-5">
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Nursery</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">04 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Lower KG</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">05 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1  text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Upper KG</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">06 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1  text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 1</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">07 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 2</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">08 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 3</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">09 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 4</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">10 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 5</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">11 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 6</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">12 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 7</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">13 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 8</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">14 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 9</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">15 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 10</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">16 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 11</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">17 Years old</p>
-                </div>
-            </div>
-            <div class="col-md-2 mb-1 text-center" id="admission_card">
-                <div>
-                    <h3 class="pt-2">Grade - 12</h3>
-                </div>
-                <div class="line"></div>
-                <div>
-                    <p class="pt-3">18 Years old</p>
-                </div>
-            </div>
-        </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="container">
         <div class="row pt-md-5">
-            <div class="col-md-3">
-                
+            <div class="col-md-6">
+                <h1 class="text-center">Classes</h1>
+                <div class="row">
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Nursery</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">04 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Lower KG</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">05 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1  text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Upper KG</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">06 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1  text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 1</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">07 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 2</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">08 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 3</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">09 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 4</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">10 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 5</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">11 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 6</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">12 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 7</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">13 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 8</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">14 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 9</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">15 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 10</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">16 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 11</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">17 Years old</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-1 text-center" id="admission_card">
+                        <div>
+                            <h3 class="pt-2">Grade - 12</h3>
+                        </div>
+                        <div class="line"></div>
+                        <div>
+                            <p class="pt-3">18 Years old</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-md-6 text-center">
-                <h1 class="text-center">Admission Proces</h1>
+                <h1 class="text-center">Admission Process</h1>
                 <div class="py-1" id="admission_card">
                     <h4>Form</h4>
                     <h5>Purchase</h5>
