--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,10 +28,10 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ACADEMIC</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
               <a class="dropdown-item" href="{% url 'Academic_App:curriculum' %}">CURRICULAM</a>
-              <a class="dropdown-item" href="#">SYLLABUS</a>
-              <a class="dropdown-item" href="#">BOOK LIST</a>
-              <a class="dropdown-item" href="#">CLASS SCHEDULE</a>
-              <a class="dropdown-item" href="#">EXAM SCHEDULE</a>
+              <a class="dropdown-item" href="{% url 'Academic_App:syllabus' %}">SYLLABUS</a>
+              <a class="dropdown-item" href="{% url 'Academic_App:book' %}">BOOK LIST</a>
+              <a class="dropdown-item" href="{% url 'Academic_App:routine' %}">CLASS SCHEDULE</a>
+              <a class="dropdown-item" href="{% url 'Academic_App:exam' %}">EXAM SCHEDULE</a>
               <a class="dropdown-item" href="#">YEAR PLANNER</a>
               <a class="dropdown-item" href="#">HOLIDAYS</a>
             </div>
