--- a/templates/Academic_App/class_schedule.html
+++ b/templates/Academic_App/class_schedule.html
@@ -14,7 +14,7 @@
 {% block body_block %}
     <section class="about-section py-5">
         <div class="contain text-center">
-            <h1 class="py-4">Class Schedule</h1>
+            <h1 class="py-4">CLASS SCHEDULE</h1>
         </div>
     </section>
 
