--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -47,19 +47,16 @@
             <a class="nav-link" href="#">NEWS & MEDIA</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="notice.html">NOTICE</a>
+            <a class="nav-link" href="#">NOTICE</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">GALLERY</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="career.html">CAREER</a>
+            <a class="nav-link" href="{% url 'Academic_App:career' %}">CAREER</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CONTACT US</a>
-          </li>
-          <li>
-            <a class="nav-link" href="signup.html">SIGNUP/LOGIN</a>
+            <a class="nav-link" href="{% url 'About_App:contact' %}">CONTACT US</a>
           </li>
         </ul>
       </div>
