--- a/templates/Academic_App/career.html
+++ b/templates/Academic_App/career.html
@@ -22,25 +22,26 @@
     <form action="">
         <section>
             <div class="row">
+                <h3>Personal Information</h3>
                 <div class="col-md-9">
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label">Applicant's Name</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control mb-3" placeholder="" required>
+                            <input type="text" class="form-control mb-3" placeholder="" required>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label">Father's Name</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control mb-3" placeholder="" required>
+                            <input type="text" class="form-control mb-3" placeholder="" required>
                         </div>
                     </div>
                     
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label">Mother's Name</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control mb-3" placeholder="" required>
+                            <input type="text" class="form-control mb-3" placeholder="" required>
                         </div>
                     </div>
                 </div>
@@ -63,6 +64,12 @@
                     <textarea class="form-control mb-3" rows="5" id="comment" name="text" required></textarea>
                 </div>
                 <div class="col-md-4 form-group row">
+                    <label class="col-form-label">Email</label>
+                    <div>
+                        <input type="email" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-4 form-group row">
                     <label class="col-form-label">Phone 1</label>
                     <div>
                         <input type="number" class="form-control mb-3" required>
@@ -75,13 +82,366 @@
                     </div>
                 </div>
                 <div class="col-md-4 form-group row">
-                    <label class="col-form-label">Email</label>
+                    <label class="col-form-label">Religion</label>
                     <div>
-                        <input type="email" class="form-control mb-3" required>
+                        <select class="form-select form-select-md mb-3" aria-label=".form-select-sm example">
+                            <option selected>Single</option>
+                            <option value="1">Married</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-4 form-group row">
+                    <label class="col-form-label">Marital Status </label>
+                    <div>
+                        <select class="form-select form-select-md mb-3" aria-label=".form-select-sm example">
+                            <option selected>Single</option>
+                            <option value="1">Married</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-4 form-group row">
+                    <label class="col-form-label">Spouse Name</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
                     </div>
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="row mt-md-5">
+                <h3>Academic Qualification</h3>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Exam</label>
+                    <div>
+                        <select class="form-select form-select-md mb-3" aria-label=".form-select-sm example">
+                            <option selected>Single</option>
+                            <option value="1">Married</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Year</label>
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Result</label>
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Group/Subject</label>
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Institute/Department</label>
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <label class="col-form-label">Board/University</label>
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <select class="form-select form-select-md mb-3" aria-label=".form-select-sm example">
+                            <option selected>Single</option>
+                            <option value="1">Married</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <select class="form-select form-select-md mb-3" aria-label=".form-select-sm example">
+                            <option selected>Single</option>
+                            <option value="1">Married</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <select class="form-select form-select-md mb-3" aria-label=".form-select-sm example">
+                            <option selected>Single</option>
+                            <option value="1">Married</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row mt-md-5">
+                <h3>Training/Course</h3>
+                <div class="col-md-4 form-group row">
+                    <label class="col-form-label">Training Title</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Year</label>
+                    <div>
+                        <input type="number" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Result</label>
+                    <div>
+                        <input type="number" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Duration</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <label class="col-form-label">Institute</label>
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="col-md-4 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="number" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row mt-md-5">
+                <h3>Experience (If any)</h3>
+                <div class="col-md-4 form-group row">
+                    <label class="col-form-label">Position</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Duration</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Department</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <label class="col-form-label">Institution</label>
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <label class="col-form-label">Responsibility</label>
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <div class="col-md-4 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-2 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3">
+                    </div>
+                </div>
+                <div class="col-md-3 form-group row">
+                    <div>
+                        <input type="text" class="form-control mb-3" required>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row mt-md-5">
+                <h3>Extracurricular/ Skill</h3>
+                <div class="col-md-12">
+                    <textarea class="form-control mb-3" rows="5" id="comment" name="text" required></textarea>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row mt-md-5">
+                <h3>Reference </h3>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label class="col-sm-6 col-form-label">Person 1 (Name)</label>
+                        <div class="col-sm-12">
+                            <input type="text" class="form-control mb-3" placeholder="" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-6 col-form-label">About</label>
+                        <div>
+                            <textarea class="form-control mb-3" rows="5" id="comment" name="text" required></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label class="col-sm-6 col-form-label">Person 2 (Name)</label>
+                        <div class="col-sm-12">
+                            <input type="text" class="form-control mb-3" placeholder="" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-6 col-form-label">About</label>
+                        <div>
+                            <textarea class="form-control mb-3" rows="5" id="comment" name="text" required></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <button type="submit" class="btn btn-primary">Submit <i class="fa-solid fa-hand-pointer"></i></button>
     </form>
 </section>
 {% endblock %}
