--- a/templates/About_App/home.html
+++ b/templates/About_App/home.html
@@ -70,7 +70,7 @@
     </div>
   </section>
 
-  <section class="container mt-md-3 mb-md-5">
+  <!-- <section class="container mt-md-3 mb-md-5">
     <h1 class="">OUR ACTIVITIES</h1>
     <div class="row">
       <div class="col-md-6 gallery-conatiner">
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="section-2 py-5">
     <div class="container"> 
