--- a/templates/footer.html
+++ b/templates/footer.html
@@ -62,7 +62,7 @@
         <div class="container">
         <div class="row pt-3">
             <div class="col-md-6"><p>Copyright © Ethereal An English Medium School</p></div>
-            <div class="col-md-6"><p class="" id="dev_text">Developed by <a class="" href="https://mdshanewaz.github.io/DarkBlackFire" target=”_blank”>Dev SHAWON</a></p></div>
+            <div class="col-md-6"><p class="" id="dev_text">Developed by <a class="" href="https://mdshanewaz.github.io/DarkBlackFire" target=”_blank”>QuantuMind</a></p></div>
         </div>
         </div>
     </div>
